# Round

./: .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Vite.Config.ts  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1710487340226-e69ccfa419995.mjs
.github/: dependabot.yml
.github/workflows/: CrabNebula.yml  Node.yml  Rust.yml  Tauri.yml  node.yml  rust.yml  tauri.yml  tauri2.yml
Source/: Index.tsx
Source/Asset/CSS/: Corner.css
Source/Element/: Corner.tsx
Source/Type/: Settings.ts
Source/elements/: Corner.tsx
src/: index.tsx
src-tauri/: .gitignore  Cargo.toml  LICENSE  build.rs  tauri.conf.json
src-tauri/Source/: main.rs
src-tauri/src/: main.rs  test.rs
src-tauri/src/lib/: monitors.rs
src/assets/css/: Window.css  corner.css
src/components/: corner.tsx  window.tsx
src/elements/: Corner.tsx
src/options/: index.ts
src/windows/: BottomLeft.html  BottomRight.html  TopLeft.html  TopRight.html  window.html
src2/assets/css/: Corner.css
src2/elements/: Corner.tsx
