[package]
name = "roundwindows"
version = "0.0.9"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tauri = { version = "2.0.2", features = [
	"tray-icon",
	"system-tray",
	"window-center",
	"window-close",
	"window-create",
	"window-hide",
	"window-maximize",
	"window-minimize",
	"window-set-always-on-top",
	"window-set-cursor-grab",
	"window-set-cursor-visible",
	"window-set-decorations",
	"window-set-focus",
	"window-set-fullscreen",
	"window-set-ignore-cursor-events",
	"window-set-position",
	"window-set-resizable",
	"window-set-size",
	"window-set-skip-taskbar",
	"window-set-title",
	"window-show",
	"window-unmaximize",
] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
custom-protocol = ["tauri/custom-protocol"]
